--- a/pom.xml
+++ b/pom.xml
@@ -9,11 +9,10 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-  <java.version>1.8</java.version>
+	<java.version>1.8</java.version>
   </properties>
   
-  <dependencies>
-  
+	<dependencies>
          <dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -27,14 +26,19 @@
     <finalName>DevOps</finalName>
 	<plugins>
    <plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-compiler-plugin</artifactId>
-    <version>3.0</version>
-    <configuration>
-     <source>1.7</source>
-     <target>1.7</target>
-    </configuration>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-compiler-plugin</artifactId>
+		<version>3.0</version>
+		<configuration>
+		 <source>1.7</source>
+		 <target>1.7</target>
+		</configuration>
    </plugin>
+    <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-help-plugin</artifactId>
+        <version>2.2</version>
+      </plugin>
   </plugins>
   </build>
 </project>
